<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.example.fiap.mob8.exerciciocotacao.CotacaoActivity">

    <TextView
        android:id="@+id/tvBovespa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="Bovespa"
        android:textSize="@dimen/font_size_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:weightSum="2" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_cotacao_row"
            android:textSize="@dimen/font_size_row"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_variacao_row"
            android:textSize="@dimen/font_size_row"
            android:layout_weight="1"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:weightSum="2" >

        <TextView
            android:id="@+id/tvValueBovespaCotacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.0000"
            android:textSize="@dimen/font_size_row"
            android:layout_weight="1"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvValueBovespaVariacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+0.00"
            android:textSize="@dimen/font_size_row"
            android:layout_weight="1"
            android:gravity="center"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvDolar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/title_dolar"
        android:textSize="@dimen/font_size_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:weightSum="2" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_cotacao_row"
            android:textSize="@dimen/font_size_row"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_variacao_row"
            android:textSize="@dimen/font_size_row"
            android:layout_weight="1"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:weightSum="2" >

        <TextView
            android:id="@+id/tvValueDolarCotacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.0000"
            android:textSize="@dimen/font_size_row"
            android:layout_weight="1"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvValueDolarVariacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+0.00"
            android:textSize="@dimen/font_size_row"
            android:layout_weight="1"
            android:gravity="center"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvEuro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/title_euro"
        android:textSize="@dimen/font_size_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_cotacao_row"
            android:textSize="@dimen/font_size_row"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_variacao_row"
            android:textSize="@dimen/font_size_row"
            android:layout_weight="1"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:weightSum="2" >

        <TextView
            android:id="@+id/tvValueEuroCotacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.0000"
            android:textSize="@dimen/font_size_row"
            android:layout_weight="1"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvValueEuroVariacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+0.00"
            android:textSize="@dimen/font_size_row"
            android:layout_weight="1"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp" >

        <TextView
            android:id="@+id/tvAtualizacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_atualizacao"
            android:textSize="@dimen/font_size_row" />

        <TextView
            android:id="@+id/tvValueAtualizacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00/00/0000"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/font_size_row"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/label_button_atualizar"
        android:textAllCaps="false"
        android:id="@+id/btnAtualizarCotacao"
        android:layout_gravity="center_horizontal" />

</LinearLayout>